-  2 Microservices developed. `card` for printing Membership card, and `license` for printing Certification/license. - server (worker) enhanced. - `proto` updated in all microservices to meet reqirements at this stage. - `member` micrservice enahnced

--- a/card/Cargo.toml
+++ b/card/Cargo.toml
@@ -2,7 +2,19 @@
 name = "card"
 version = "0.1.0"
 edition = "2021"
+authors = ["Moaz bin Mokhtar <moaz.mokhtar@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tonic = "0.7"
+prost = "0.10"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+dotenv = "0.15.0"
+env_logger = "0.9.0"
+uuid = {version = "1.0.0", features = ["serde", "v4"]}
+log="0.4.17"
+genpdf = "0.2.0"
+
+[build-dependencies]
+tonic-build = "0.7"
